# wwd_i

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  main.py  pyproject.toml
docs/: architecture.md  data-licensing.md  head-data-efficiency.md  implementation-plan.md  integration-guide.md  word-selection.md
notebooks/: jupytext.toml  train_backbone_colab.ipynb  train_backbone_colab.py  train_head_colab.ipynb  train_head_colab.py
src/wwd_i/: __init__.py  cli.py  config.py
src/wwd_i/audio/: __init__.py  io.py  sources.py
src/wwd_i/data/: __init__.py  _datasets_compat.py  augment.py  backgrounds.py  clips.py  confusables.py  deepdub_tts.py  elevenlabs.py  episodic.py  gemini_tts.py  groq_tts.py  hf_audio.py  local_tts.py  mswc.py  negatives.py  quality.py  speech_commands.py  tts.py
src/wwd_i/export/: __init__.py  compare.py  identity.py  quantize.py
src/wwd_i/features/: __init__.py  melspec.py  streaming.py
src/wwd_i/models/: __init__.py  backbone.onnx  backbone.py  head.py  melspec.onnx
src/wwd_i/runtime/: __init__.py  engine.py  harness.py
src/wwd_i/train/: __init__.py  audit_positives.py  gpu_augment.py  mine_neg.py  preprocess_bg.py  probe.py  proto.py  train_backbone.py  train_head.py
tests/: test_audio.py  test_audit_positives.py  test_augment.py  test_backbone.py  test_backgrounds.py  test_calibrate.py  test_clips.py  test_confusables.py  test_deepdub_tts.py  test_elevenlabs.py  test_engine.py  test_features.py  test_gemini_tts.py  test_gpu_augment.py  test_groq_tts.py  test_head.py  test_hf_audio.py  test_mine_neg.py  test_mswc.py  test_negatives.py  test_preprocess_bg.py  test_quality.py  test_quantize.py  test_runtime.py  test_speech_commands.py  test_train_head.py  test_tts.py
