[project]
name = "wwd-i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "soundfile>=0.14.0",
    "soxr>=1.1.0",
]

[project.scripts]
wwd-i = "wwd_i.cli:main"


[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"


# torch/torchaudio are training/export-only (CPU build for local dev; Colab
# provides its own CUDA build). Inference ships with onnxruntime alone.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }


[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupytext>=1.19",  # pair the Colab notebooks with py:percent scripts (notebooks/jupytext.toml)
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "sounddevice>=0.5.5",
]
train = [
    "datasets>=2.20.0,<4.0.0",  # MSWC ships a loading script; datasets>=4 dropped script support
    "elevenlabs>=1.0",  # Phase-3 TTS sample generation (Colab-side; never shipped)
    "google-genai>=1.0",  # Phase-3 acoustic confusables via Gemini (Colab-side; never shipped)
    "onnxscript>=0.7.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
]


[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# Paired jupytext scripts: a percent .py with shell magics commented out leaves empty
# if/else blocks -> not parseable as Python. Lint the .ipynb (ruff is notebook-aware) instead.
extend-exclude = ["notebooks/*.py"]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "C90", "UP"]
ignore = ["TC001", "TC002", "TC003", "E501", "RUF012"]
unfixable = ["TC"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
# Colab-only notebooks import google.colab / call get_ipython(); those exist only in
# the Colab runtime, so type-checking them locally is meaningless (ruff still lints them).
exclude = ["notebooks"]
